<resources>
    <string name="app_name">FirstAssignment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Bill Thomas</string>
    <string name="poe">Computer Science</string>
    <string name="cs1">CS1? Yes a long time ago</string>
    <string name="cs2">CS2? Yes a long time ago</string>
    <string name="software_engineering">I am teaching Software Engineering</string>
    <string name="sql">I have SQL experience</string>
</resources>
